<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="analysis">Hasil Analisis</string>
    <string name="result">%1$s %2$s</string>
    <string name="no_data">Belum ada data</string>
    <string name="label">NON CANCER</string>
    <string name="score">Confidence score: %1$s</string>
    <string name="time">Inference time: %1$s ms</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="cancer_desc">The classifier detected signs of cancer. Please consult with a healthcare professional immediately for further evaluation and treatment options.</string>
    <string name="non_cancer_desc">Your skin scan results show no signs of cancer. Continue to protect your skin and do regular check-ups to maintain its health.</string>
    <string name="asclepus">Asclepus</string>
    <string name="add">Periksa</string>
    <string name="history">History</string>
</resources>