<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/resultImage"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/label" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/resultImage"
        android:textSize="16sp"
        tools:text="@string/score" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/resultImage"
        android:textSize="16sp"
        tools:text="@string/time" />
</RelativeLayout>